; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_search_manifest_in_module.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_actctx.c_search_manifest_in_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.actctx_loader = type { i32 }
%struct.assembly_identity = type { i32 }
%struct.TYPE_3__ = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@IMAGE_DIRECTORY_ENTRY_RESOURCE = common dso_local global i32 0, align 4
@STATUS_RESOURCE_DATA_NOT_FOUND = common dso_local global i64 0, align 8
@RT_MANIFEST = common dso_local global i64 0, align 8
@STATUS_RESOURCE_TYPE_NOT_FOUND = common dso_local global i64 0, align 8
@STATUS_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.actctx_loader*, %struct.assembly_identity*, i32, i32, i32, i32, i32)* @search_manifest_in_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @search_manifest_in_module(%struct.actctx_loader* %0, %struct.assembly_identity* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i64, align 8
  %9 = alloca %struct.actctx_loader*, align 8
  %10 = alloca %struct.assembly_identity*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca %struct.TYPE_3__*, align 8
  %21 = alloca i64, align 8
  store %struct.actctx_loader* %0, %struct.actctx_loader** %9, align 8
  store %struct.assembly_identity* %1, %struct.assembly_identity** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %22 = load i32, i32* %14, align 4
  %23 = load i32, i32* @TRUE, align 4
  %24 = load i32, i32* @IMAGE_DIRECTORY_ENTRY_RESOURCE, align 4
  %25 = call i8* @RtlImageDirectoryEntryToData(i32 %22, i32 %23, i32 %24, i32* %16)
  store i8* %25, i8** %17, align 8
  %26 = load i8*, i8** %17, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %30, label %28

28:                                               ; preds = %7
  %29 = load i64, i64* @STATUS_RESOURCE_DATA_NOT_FOUND, align 8
  store i64 %29, i64* %8, align 8
  br label %87

30:                                               ; preds = %7
  %31 = load i32, i32* %16, align 4
  %32 = sext i32 %31 to i64
  %33 = icmp ult i64 %32, 4
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i64, i64* @STATUS_RESOURCE_DATA_NOT_FOUND, align 8
  store i64 %35, i64* %8, align 8
  br label %87

36:                                               ; preds = %30
  %37 = load i8*, i8** %17, align 8
  %38 = bitcast i8* %37 to i32*
  store i32* %38, i32** %19, align 8
  %39 = load i32*, i32** %19, align 8
  %40 = load i64, i64* @RT_MANIFEST, align 8
  %41 = trunc i64 %40 to i32
  %42 = load i8*, i8** %17, align 8
  %43 = call i8* @find_entry_by_name(i32* %39, i32 %41, i8* %42, i32 1)
  store i8* %43, i8** %18, align 8
  %44 = icmp ne i8* %43, null
  br i1 %44, label %47, label %45

45:                                               ; preds = %36
  %46 = load i64, i64* @STATUS_RESOURCE_TYPE_NOT_FOUND, align 8
  store i64 %46, i64* %8, align 8
  br label %87

47:                                               ; preds = %36
  %48 = load i8*, i8** %18, align 8
  %49 = bitcast i8* %48 to i32*
  store i32* %49, i32** %19, align 8
  %50 = load i32*, i32** %19, align 8
  %51 = load i8*, i8** %17, align 8
  %52 = call i8* @find_first_id_entry(i32* %50, i8* %51, i32 1)
  store i8* %52, i8** %18, align 8
  %53 = icmp ne i8* %52, null
  br i1 %53, label %56, label %54

54:                                               ; preds = %47
  %55 = load i64, i64* @STATUS_RESOURCE_TYPE_NOT_FOUND, align 8
  store i64 %55, i64* %8, align 8
  br label %87

56:                                               ; preds = %47
  %57 = load i8*, i8** %18, align 8
  %58 = bitcast i8* %57 to i32*
  store i32* %58, i32** %19, align 8
  %59 = load i32*, i32** %19, align 8
  %60 = load i8*, i8** %17, align 8
  %61 = call i8* @find_first_entry(i32* %59, i8* %60, i32 0)
  store i8* %61, i8** %18, align 8
  %62 = icmp ne i8* %61, null
  br i1 %62, label %65, label %63

63:                                               ; preds = %56
  %64 = load i64, i64* @STATUS_RESOURCE_TYPE_NOT_FOUND, align 8
  store i64 %64, i64* %8, align 8
  br label %87

65:                                               ; preds = %56
  %66 = load i8*, i8** %18, align 8
  %67 = bitcast i8* %66 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %67, %struct.TYPE_3__** %20, align 8
  %68 = load i32, i32* %14, align 4
  %69 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %70 = call i64 @LdrAccessResource(i32 %68, %struct.TYPE_3__* %69, i8** %18, i32* null)
  store i64 %70, i64* %21, align 8
  %71 = load i64, i64* %21, align 8
  %72 = load i64, i64* @STATUS_SUCCESS, align 8
  %73 = icmp eq i64 %71, %72
  br i1 %73, label %74, label %85

74:                                               ; preds = %65
  %75 = load %struct.actctx_loader*, %struct.actctx_loader** %9, align 8
  %76 = load %struct.assembly_identity*, %struct.assembly_identity** %10, align 8
  %77 = load i32, i32* %11, align 4
  %78 = load i32, i32* %12, align 4
  %79 = load i32, i32* %13, align 4
  %80 = load i8*, i8** %18, align 8
  %81 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %82 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %81, i32 0, i32 0
  %83 = load i32, i32* %82, align 4
  %84 = call i64 @parse_manifest(%struct.actctx_loader* %75, %struct.assembly_identity* %76, i32 %77, i32 %78, i32 %79, i8* %80, i32 %83)
  store i64 %84, i64* %21, align 8
  br label %85

85:                                               ; preds = %74, %65
  %86 = load i64, i64* %21, align 8
  store i64 %86, i64* %8, align 8
  br label %87

87:                                               ; preds = %85, %63, %54, %45, %34, %28
  %88 = load i64, i64* %8, align 8
  ret i64 %88
}

declare dso_local i8* @RtlImageDirectoryEntryToData(i32, i32, i32, i32*) #1

declare dso_local i8* @find_entry_by_name(i32*, i32, i8*, i32) #1

declare dso_local i8* @find_first_id_entry(i32*, i8*, i32) #1

declare dso_local i8* @find_first_entry(i32*, i8*, i32) #1

declare dso_local i64 @LdrAccessResource(i32, %struct.TYPE_3__*, i8**, i32*) #1

declare dso_local i64 @parse_manifest(%struct.actctx_loader*, %struct.assembly_identity*, i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
